--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -576,6 +576,7 @@ endif
 ifdef EXECUTABLE
 install_executable: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/bin
+	rm -f $(CL_PREFIX)/bin/$(EXECUTABLE)
 ifdef CL_USE_IL
 	$(LD) $(CL_OBJECTS_ALL) $(LDFLAGS) $(CL_IL_LDFLAGS_INSTALL) -o $(CL_PREFIX)/bin/$(EXECUTABLE)
 else
@@ -590,6 +591,7 @@ ifdef LIBRARY
 ifeq ($(CL_LTYPE),shared)
 install_library: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/lib
+	rm -f $(CL_PREFIX)/lib/$(CL_LIBRARY_FNAME)
 	cp $(CL_BD)/$(CL_LIBRARY_FNAME) $(CL_PREFIX)/lib/
 ifneq ($(CL_LIBRARY_SONAME), $(CL_LIBRARY_FNAME))
 	(cd $(CL_PREFIX)/lib && rm -f $(CL_LIBRARY_SONAME) && ln -s $(CL_LIBRARY_FNAME) $(CL_LIBRARY_SONAME))
@@ -620,7 +622,7 @@ endif # LIBRARY
 ifdef EXPORT_INCLUDES
 install_includes: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/include
-	rm -rf $(CL_PREFIX)/include/$(EXPORT_INCLUDES)
+	rm -rf $(EXPORT_INCLUDES:%=$(CL_PREFIX)/include/%)
 	cp -r $(EXPORT_INCLUDES) $(CL_PREFIX)/include/
 
 override CL_INSTALL_PARTS += install_includes
@@ -629,7 +631,7 @@ endif
 ifdef SCRIPTS
 install_scripts: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/bin
-	rm -rf $(CL_PREFIX)/bin/$(SCRIPTS)
+	rm -rf $(SCRIPTS:%=$(CL_PREFIX)/bin/%)
 	cp $(SCRIPTS) $(CL_PREFIX)/bin/
 
 override CL_INSTALL_PARTS += install_scripts
@@ -639,7 +641,7 @@ ifdef SCRIPTS_WI
 ifdef CL_INSTALL_WI
 install_scripts_wi: $(ALWAYS)
 	mkdir -p $(CL_PREFIX)/bin
-	rm -rf $(CL_PREFIX)/bin/$(SCRIPTS_WI)
+	rm -rf $(SCRIPTS_WI:%=$(CL_PREFIX)/bin/%)
 	cp $(SCRIPTS_WI) $(CL_PREFIX)/bin/
 
 override CL_INSTALL_PARTS += install_scripts_wi
