Добавил liborder.awk (скрипт для управления порядком библиотек) Исправил findstring на filter в генерации $CL_DIR/rules.cvslvk (иначе могли   быть ошибки, если имя одной WI содержится в имени другой)

--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -697,6 +697,7 @@ $(CL_SL_NAMES):
 	rm -f $(CL_SL_NAMES) && ln -s $(CL_SYMLINKS) .
 endif
 
+override CL_TMP := $(shell echo $(EXECUTABLE) $(CL_SL_NAMES) 1>&2)
 all: all_subdirs $(EXECUTABLE) $(CL_SL_NAMES)
 
 $(EXECUTABLE): $(CL_BD)/$(EXECUTABLE)
